# llmops-chat

./: .gitignore  README.md  pyproject.toml  pytest.ini
app/http/: app.py  module.py
config/: __init__.py  config.py  default_config.py
docs/: pg-docker安装.md  python中的依赖注入.md  创建model的提示词.md
docs/接口文档/: 记忆相关功能.md
docs/数据库关系/: llmops数据库实体关系图.drawio  数据库ER图.md
internal/entity/: app_entity.py  cache_entity.py  conversation_entity.py  dataset_entity.py  upload_file_entity.py
internal/exception/: __init__.py  exception.py
internal/extension/: celery_extension.py  logging_extension.py  redis_extension.py
internal/handler/: __init__.py  api_key_handler.py  api_tool_handler.py  app_handler.py  auth_handler.py  builtin_tool_handler.py  dataset_handler.py  document_handler.py  oauth_handler.py  openapi_handler.py  segment_handler.py  upload_file_handler.py
internal/lib/: helper.py
internal/middleware/: middleware.py
internal/model/: __init__.py  api_key.py  api_tool.py  app.py  conversation.py  dataset.py  end_user.py  upload_file.py
internal/router/: router.py
internal/schema/: __init__.py  account_schema.py  api_tool_schema.py  app_schema.py  builtin_app_schema.py  dataset_schema.py  document_schema.py  openapi_schema.py  schema.py  segment_schema.py  upload_file_schema.py
internal/server/: http.py
internal/service/: __init__.py  account_service.py  ai_service.py  api_key_service.py  api_tool_service.py  app_config_service.py  app_service.py  base_service.py  builtin_app_service.py  builtin_tools_service.py  (+14 more)
test/: __init__.py  test_injector.py
(+58 files in other folders)
