[project]
name = "llmops"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.2",
    "flask-migrate>=4.1.0",
    "flask-sqlalchemy>=3.1.1",
    "flask-wtf>=1.2.2",
    "injector>=0.22.0",
    "langchain==0.2.1",
    "langchain-community==0.2.1",
    "langchain-openai>=0.1.25",
    "numpy==1.26.3",
    "psycopg2>=2.9.10",
    "pytest>=8.4.2",
    "python-dotenv>=1.1.1",
]
